# UniCommon

./: .gitignore  CMakeLists.txt
include/: CMakeLists.txt  UniCommon.h
include/Utils/: ApplicationTimer.hpp  ArrayPtr.hpp  CReaderImplement.h  UniException.h  UniFile.h  UniMutex.hpp  UniSettings.h  UniThread.hpp  UniTimer.h
src/: CMakeLists.txt  UniCommonTest.cpp  test.ini  utf8.txt
